# rules_abs

./: BUILD.bazel  MODULE.bazel  README.md
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: ci.yml
abs/: extensions.bzl  repo_rules.bzl
abs/private/: BUILD.bazel  jsonpath.bzl  util.bzl
abs/private/extensions/: BUILD.bazel  abs_container.bzl  s3_bucket.bzl
abs/private/repo_rules/: BUILD.bazel  abs_archive.bzl  abs_file.bzl  eager.bzl  hub_repo.bzl  s3_archive.bzl  s3_file.bzl
abs/private/rules/: BUILD.bazel  augmented_blob.bzl  copy.bzl  symlink.bzl
docs/: BUILD.bazel
examples/full/: .bazelrc  BUILD.bazel  MODULE.bazel  abs_lock.json
examples/full/tool_test/: BUILD.bazel
examples/full/tools/: mock-credential-helper
tests/unit/jsonpath/: test_jsonpath.bzl
tests/unit/url_encoding/: test_url_encoding.bzl
