exports_files(["check_file_hash.sh"])

sh_test(
    name = "check_readme",
    srcs = ["check_file_hash.sh"],
    args = [
        "$(location @readme//file)",
        "896162e6c80c4f076a61831c224c289568579a481a228baf6af94f0d73693b3f",
    ],
    data = ["@readme//file"],
)


sh_test(
    name = "check_bundle_tar_gz",
    srcs = ["check_file_hash.sh"],
    args = [
        "$(location @bundle_tar_gz//:bundle/README.md)",
        "896162e6c80c4f076a61831c224c289568579a481a228baf6af94f0d73693b3f",
    ],
    data = ["@bundle_tar_gz//:bundle/README.md"],
)

sh_test(
    name = "check_container_files",
    srcs = ["check_file_hash.sh"],
    args = [
        "$(location @container_files//:public/README.md)",
        "896162e6c80c4f076a61831c224c289568579a481a228baf6af94f0d73693b3f",
    ],
    data = ["@container_files//:public/README.md"],
)

sh_test(
    name = "check_container_files_symlink",
    srcs = ["check_file_hash.sh"],
    args = [
        "$(location @container_files_symlink//:public/custom/local/path/SHA256SUM)",
        "3ac8ae918da4aa5f0434385f2e8728032d56f59fac7a7f817ccb39ab97d3f014",
        "$(location @container_files_symlink//:public/README.md)",
        "896162e6c80c4f076a61831c224c289568579a481a228baf6af94f0d73693b3f",
        "$(location @container_files_symlink//:public/linux/arm64/hello)",
        "4700e3857e4ee071b4d02caaa5be9fa8fa941ff5a5f41c5d9fa080983cb6ad0f",
        "$(location @container_files_symlink//:public/linux/amd64/hello)",
        "7c14313f0957e3a72f5b4940e143963af590cc5dac42d48a376162351d585920",
        "$(location @container_files_symlink//:public/darwin/amd64/hello)",
        "520c31d10131c1acaf0401058a4abf2416b0beb6e243635f26787c659604f1ee",
        "$(location @container_files_symlink//:public/darwin/arm64/hello)",
        "3196fec4a6b4b7c8499f6f6cbacef32eae1ceb2f517ec8c1953dbd02145554a9",
    ],
    data = [
        "@container_files_symlink//:public/custom/local/path/SHA256SUM",
        "@container_files_symlink//:public/README.md",
        "@container_files_symlink//:public/linux/arm64/hello",
        "@container_files_symlink//:public/linux/amd64/hello",
        "@container_files_symlink//:public/darwin/amd64/hello",
        "@container_files_symlink//:public/darwin/arm64/hello",
    ],
)

sh_test(
    name = "check_container_files_alias",
    srcs = ["check_file_hash.sh"],
    args = [
        "$(location @container_files_alias//:public/README.md)",
        "896162e6c80c4f076a61831c224c289568579a481a228baf6af94f0d73693b3f",
    ],
    data = ["@container_files_alias//:public/README.md"],
)

sh_test(
    name = "check_container_files_copy",
    srcs = ["check_file_hash.sh"],
    args = [
        "$(location @container_files_copy//:public/README.md)",
        "896162e6c80c4f076a61831c224c289568579a481a228baf6af94f0d73693b3f",
    ],
    data = ["@container_files_copy//:public/README.md"],
)

sh_test(
    name = "check_container_files_eager",
    srcs = ["check_file_hash.sh"],
    args = [
        "$(location @container_files_eager//:public/README.md)",
        "896162e6c80c4f076a61831c224c289568579a481a228baf6af94f0d73693b3f",
    ],
    data = ["@container_files_eager//:public/README.md"],
)



# sh_test(
#     name = "check_local_path",
#     srcs = ["check_file_hash.sh"],
#     args = [
#         "$(location @what//:custom/local/path/azure-cli-2.66.1-x64.zip)",
#         "9567c5e8d7fe0d4dc9351b85fdab254ccc5f4218c4def688f44d7e76c20a3d29",
#     ],
#     data = ["@what//:custom/local/path/azure-cli-2.66.1-x64.zip"],
# )



# sh_test(
#     name = "check_release_notes_1_30_2",
#     srcs = ["check_file_hash.sh"],
#     args = [
#         "$(location @k8s_1_30_2_release_notes//file)",
#         "e879f76b7bac8effe4cc53bce034f258ce15b2825f3018c7078f25e832c3feb8",
#     ],
#     data = ["@k8s_1_30_2_release_notes//file"],
# )

# sh_test(
#     name = "check_release_notes_1_30_3",
#     srcs = ["check_file_hash.sh"],
#     args = [
#         "$(location @k8s_1_30_3_release_notes//file)",
#         "909b62c80b5ce1f5075c9c9301f79673727a77c46a525f12c4753370536bfe2c",
#     ],
#     data = ["@k8s_1_30_3_release_notes//file"],
# )

# sh_test(
#     name = "check_part_of_s3_archive",
#     srcs = ["check_file_hash.sh"],
#     args = [
#         "$(location @kubernetes_1_30_3//:README.md)",
#         "5ef6a2416ab1ef3d3dcf0961a270cdbb049787b8c2428b631db1b0fd5670109c",
#     ],
#     data = ["@kubernetes_1_30_3//:README.md"],
# )

# sh_test(
#     name = "check_symlink_hub",
#     srcs = ["check_file_hash.sh"],
#     args = [
#         "$(location @symlink_hub_repo//:release/v1.30.3/bin/linux/amd64/kubectl)",
#         "abd83816bd236b266c3643e6c852b446f068fe260f3296af1a25b550854ec7e5",
#         "$(location @symlink_hub_repo//:release/v1.30.3/bin/linux/arm64/kubectl)",
#         "c6f9568f930b16101089f1036677bb15a3185e9ed9b8dbce2f518fb5a52b6787",
#         "$(location @symlink_hub_repo//:release/v1.30.3/bin/darwin/amd64/kubectl)",
#         "b3ccb0ba6f7972074b0a1e13340307abfd5a5eef540c521a88b368891ec5cd6b",
#         "$(location @symlink_hub_repo//:release/v1.30.3/bin/darwin/arm64/kubectl)",
#         "71f3febd165423991e0aabef5750cb8de6fc43e93ea130767d12eb183cc63a5b",
#         "$(location @symlink_hub_repo//:custom/local/path/SHA256SUMS)",
#         "3a26f0f0f57770363ce072afdec016204ba4f91dacf07c21be583aaa0e07eee6",
#     ],
#     data = [
#         "@symlink_hub_repo//:custom/local/path/SHA256SUMS",
#         "@symlink_hub_repo//:release/v1.30.3/bin/darwin/amd64/kubectl",
#         "@symlink_hub_repo//:release/v1.30.3/bin/darwin/arm64/kubectl",
#         "@symlink_hub_repo//:release/v1.30.3/bin/linux/amd64/kubectl",
#         "@symlink_hub_repo//:release/v1.30.3/bin/linux/arm64/kubectl",
#     ],
# )

# sh_test(
#     name = "check_alias_hub",
#     srcs = ["check_file_hash.sh"],
#     args = [
#         "$(location @alias_hub_repo//:release/v1.30.3/bin/linux/amd64/kubectl)",
#         "abd83816bd236b266c3643e6c852b446f068fe260f3296af1a25b550854ec7e5",
#     ],
#     data = ["@alias_hub_repo//:release/v1.30.3/bin/linux/amd64/kubectl"],
# )

# sh_test(
#     name = "check_copy_hub",
#     srcs = ["check_file_hash.sh"],
#     args = [
#         "$(location @copy_hub_repo//:release/v1.30.3/bin/linux/amd64/kubectl)",
#         "abd83816bd236b266c3643e6c852b446f068fe260f3296af1a25b550854ec7e5",
#     ],
#     data = ["@copy_hub_repo//:release/v1.30.3/bin/linux/amd64/kubectl"],
# )

# sh_test(
#     name = "check_eager",
#     srcs = ["check_file_hash.sh"],
#     args = [
#         "$(location @eager_repo//:release/v1.30.3/bin/linux/amd64/kubectl)",
#         "abd83816bd236b266c3643e6c852b446f068fe260f3296af1a25b550854ec7e5",
#     ],
#     data = ["@eager_repo//:release/v1.30.3/bin/linux/amd64/kubectl"],
# )
