module(
    name = "full_example",
    version = "0.0.0",
)

bazel_dep(
    name = "rules_abs",
)
local_path_override(
    module_name = "rules_abs",
    path = "../..",
)

bazel_dep(
    name = "tweag-credential-helper",
    version = "0.0.5",
    dev_dependency = True,
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "platforms",
    version = "0.0.11",
)

abs_file = use_repo_rule("@rules_abs//abs:repo_rules.bzl", "abs_file")
abs_file(
    name = "readme",
    sha256 = "896162e6c80c4f076a61831c224c289568579a481a228baf6af94f0d73693b3f",
    url = "https://rulesabs.blob.core.windows.net/public/README.md",
)

abs_archive = use_repo_rule("@rules_abs//abs:repo_rules.bzl", "abs_archive")
abs_archive(
    name = "bundle_tar_gz",
    build_file_content = """exports_files(glob(["**"]))""",
    sha256 = "893d40bd6c1768a3f199e4b5d0e1845729345de92a6091eaa9f5fd2f14cb7e61",
    url = "https://rulesabs.blob.core.windows.net/public/compressed/bundle.tar.gz",
)

abs_container= use_extension("@rules_abs//abs:extensions.bzl", "abs_container")
abs_container.from_file(
    name = "container_files",
    container = "public",
    storage_account = "rulesabs.blob.core.windows.net",
    lockfile = "//:abs_lock.json",
)
abs_container.from_file(
    name = "container_files_symlink",
    container = "public",
    storage_account = "rulesabs.blob.core.windows.net",
    lockfile = "//:abs_lock.json",
    method = "symlink",
)
abs_container.from_file(
    name = "container_files_alias",
    container = "public",
    storage_account = "rulesabs.blob.core.windows.net",
    lockfile = "//:abs_lock.json",
    method = "alias",
)
abs_container.from_file(
    name = "container_files_copy",
    container = "public",
    storage_account = "rulesabs.blob.core.windows.net",
    lockfile = "//:abs_lock.json",
    method = "copy",
)
abs_container.from_file(
    name = "container_files_eager",
    container = "public",
    storage_account = "rulesabs.blob.core.windows.net",
    lockfile = "//:abs_lock.json",
    method = "eager",
)
use_repo(
    abs_container, 
    "container_files",
    "container_files_symlink",
    "container_files_alias",
    "container_files_copy",
    "container_files_eager",
)